fixed gap at top of carousel image

--- a/client/styles.css
+++ b/client/styles.css
@@ -178,7 +178,7 @@ a.navbar-brand:hover, a.navbar-brand:active, a.navbar-brand:visited, a.navbar-br
     float: right;
 }
 .topp {
-    margin-top: 7em;
+    margin-top: 5em;
 }
 
 
